[tool.poetry]
name = "python_dbx_sdk_demo"
version = "0.1.0"
description = ""
authors = ["Ganesh Chandrasekaran <gchandra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
databricks-sdk = "^0.29.0"
pdoc = "^14.6.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
